# DeepEyeUnlocker

./: .gitignore  BUILD_GUIDE_APK_ZIP.md  CONTRIBUTING.md  DeepEyeUnlocker.sln  GOD_PROMPT.txt  MAINTAINER_CHECKLIST.md  OLD_UI_DIAGNOSIS.md  POST_RELEASE_SUMMARY_v4.0.0.md  PROJECT_MANIFEST.md  README.md  RECOMMENDATIONS.md  RELEASE_NOTES_v4.1.0.md  RELEASE_NOTES_v4.5.0.md  RELEASE_SOP.md  SCENARIOS_TODO.md  TESTING_WITH_TESTSPRITE.md  TESTSPRITE_REPORT.md  TEST_PLAN.md  f_cmd.txt  testsprite-frp-scenarios.md  testsprite-plan.md  testsprite-project-overview.md  testsprite-protocol-scenarios.md  testsprite-report-INITIAL.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  refactor.md
.github/workflows/: build.yml  portable_release.yml  release.yml  testsprite.yml
DeepEye.UI.Modern/: App.xaml  App.xaml.cs  DeepEye.UI.Modern.csproj  MainWindow.xaml  MainWindow.xaml.cs
DeepEye.UI.Modern/Infrastructure/: GlobalExceptionHandler.cs  LocalizationProvider.cs  UILogSink.cs  UIProgressReporter.cs  WindowCompositionHelper.cs
DeepEye.UI.Modern/Themes/: DeepEyeTheme.xaml
DeepEye.UI.Modern/ViewModels/: AnalyticsCenterViewModel.cs  CenterViewModelBase.cs  CloakCenterViewModel.cs  CloudSyncViewModel.cs  Converters.cs  DeviceInfoViewModel.cs  DriverCenterViewModel.cs  ExpertCenterViewModel.cs  FlashCenterViewModel.cs  FleetCenterViewModel.cs  FrpCenterViewModel.cs  GlobalHudViewModel.cs  HealthCenterViewModel.cs  MainViewModel.cs  PartitionCenterViewModel.cs  UnlockCenterViewModel.cs
DeepEye.UI.Modern/Views/: AnalyticsCenterView.xaml  AnalyticsCenterView.xaml.cs  CloakCenterView.xaml  CloakCenterView.xaml.cs  CloudSyncView.xaml  CloudSyncView.xaml.cs  DeviceInfoView.xaml  DeviceInfoView.xaml.cs  DriverCenterView.xaml  DriverCenterView.xaml.cs  ExpertCenterView.xaml  ExpertCenterView.xaml.cs  FlashCenterView.xaml  FlashCenterView.xaml.cs  FleetCenterView.xaml  FleetCenterView.xaml.cs  FrpCenterView.xaml  FrpCenterView.xaml.cs  HealthCenterView.xaml  HealthCenterView.xaml.cs  PartitionCenterView.xaml  PartitionCenterView.xaml.cs  UnlockCenterView.xaml  UnlockCenterView.xaml.cs
QuickStart/: Package.wxs  QuickStart.wixproj
artifacts/: DeepEyeUnlocker-v4.0.0-Portable.zip.sha256
artifacts/portable/: LICENSE
artifacts/release/: DeepEyeUnlocker.exe.sha256  README.md
assets/: EdlProfiles.json  Profiles.json  models_import.csv
backend/: package-lock.json  package.json  server.js
backend/models/: Device.js  Firmware.js  Job.js
backend/routes/: devices.js  logs.js
docs/: ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  CLOAK_STEALTH_2025.md  DSU_SANDBOX.md  EDL_GUIDE.md  FRP_ENGINE_CHECKLIST.md  IMPLEMENTATION_PLAN_DRIVER_V4.md  IMPLEMENTATION_PLAN_ORCHESTRATION.md  IMPLEMENTATION_ROADMAP_ADVANCED.md  NEXT_MILESTONE_v1.3.0.md  NEXT_MILESTONE_v1.4.0.md  NEXT_MILESTONE_v4.2.0.md  PRD_DeepEyeUnlocker.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.1.1.md  RELEASE_NOTES_v2.0.0.md  RELEASE_NOTES_v3.0.0.md  RELEASE_NOTES_v3.1.0.md  RELEASE_NOTES_v3.1.1.md  RELEASE_NOTES_v3.1.2.md  RELEASE_NOTES_v3.1.4.md  RELEASE_NOTES_v3.1.5.md  RELEASE_NOTES_v3.2.0.md  RELEASE_NOTES_v4.0.0.md  RELEASE_NOTES_v4.1.6.md  ROADMAP_v5.0.0.md  ROADMAP_v5.1.0.md  SUPPORTED_DEVICES.md  SYSTEM_DOCUMENTATION.md  TESTING_GUIDE.md  TESTSPRITE_INTEGRATION.md  TROUBLESHOOTING.md  TUTORIAL_SCRIPT.md  USB_ABSTRACTION_OVERVIEW.md  USER_MANUAL.md  WALKTHROUGH.md  ai_protocol_analysis.md  competitive_analysis.md  frp_policy_testing.md  (+10 more)
installer/: DeepEyeUnlocker.wixproj  Product.wxs
kernel/: Makefile  implementation_plan.md
kernel/include/: boot_image.h  deepeye_kernel.h
kernel/ksu_module/: module.prop  post-fs-data.sh  service.sh
kernel/src/: boot_image_core.cpp  boot_patch.cpp  deepeye_py.cpp  exploit_monitor.c  ksu_bridge.c  main.c
portable/android/: gradlew  gradlew.bat  settings.gradle
portable/android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
portable/ci/: build_core.sh
portable/core/: CMakeLists.txt
portable/core/include/: boot_patcher.h  brom_proto.h  da_handler.h  deepeye_core.h  deepeye_exports.h  edl_proto.h  firehose.h  gpt_parser.h  sparse_handler.h  usb_transport.h
portable/core/src/: deepeye_exports.cpp
portable/core/src/protocols/: boot_patcher.cpp  brom_manager.cpp  da_handler.cpp  edl_manager.cpp  firehose.cpp  gpt_parser.cpp  protocol_engine.cpp  sparse_handler.cpp
portable/core/src/transport/: usb_transport.cpp
portable/desktop/: main.cpp
scenarios/firehose/: configure_timeout.json  crc_mismatch.json  mid_transfer_disconnect.json  open_success.json
scenarios/frp/: firehose_frp_locked_read_info_only.json  firehose_frp_partial_access.json  firehose_frp_write_denied.json  mtk_frp_partition_protected.json  mtk_frp_policy_after_wipe.json  mtk_frp_sla_required.json  samsung_persistent.json
scenarios/mtk/: auth_required.json  brom_handshake_success.json  handshake_mismatch.json  preloader_to_da.json
scenarios/sahara/: hello_success.json  hello_timeout.json  latency_spike.json  malformed_hello.json  memory_read_loop.json
scripts/: build-release.sh  build.ps1  export_for_android.py  import_models.py  setup-dev.ps1  setup-labels.sh
scripts/linux/: 51-deepeye.rules  deepeyeunlocker.desktop  install.sh
src/: DeepEyeUnlocker.csproj  Program.cs  nlog.config
src/CLI/: DeepEyeUnlocker.CLI.csproj  Program.cs
src/Core/: AnalyticsManager.cs  Device.cs  DeviceManager.cs  EdlProfileProvider.cs  HistoryManager.cs  Logger.cs  Operation.cs  OperationFactory.cs  OperationLibrary.cs  PartitionInfo.cs  ProfileManager.cs  ProtocolDiscoveryService.cs  ResourceManager.cs  UpdateManager.cs  VersionManager.cs
src/DeepEyeUnlocker.MCP/: DeepEyeUnlocker.MCP.csproj  Models.cs  Program.cs
src/Drivers/: DriverInstaller.cs  DriverManager.cs  SmartDriverInstaller.cs  UsbDriverManager.cs
src/Helpers/: DriverChecker.cs  FileHelper.cs  LocalizationManager.cs  NotificationHelper.cs
src/Infrastructure/: AdbClient.cs  IAdbClient.cs  KernelBridge.cs
src/Operations/: AdbToolsManager.cs  (+19 more)
tests/: DeepEyeUnlocker.Tests.csproj
testsprite/: config.json
web/: index.html
(+313 files in other folders)
